--- a/index.html
+++ b/index.html
@@ -1,19 +1,67 @@
 <!DOCTYPE html>
-
 <html>
 	<head>
 		<meta charset="utf-8">
 		<title>Denver Conrad | Designer</title>
+		<link rel="stylesheet" href="css/normalize.css">
 	</head>
 	<body>
 		<header>
-			<h1>Denver Conrad</h1>
-			<h2>Designer</h2>	
+			<a href="index.html">
+				<h1>Denver Conrad</h1>
+				<h2>Designer</h2>	
+			</a>
+			<nav>
+				<ul>
+					<li><a href="index.html">Portfolio</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
 		</header>
 		<section>
-			<p>Gallery.</p>
+			<ul>
+				<li>
+					<a href="http://placehold.it/1024x768">					
+						<img src="http://placehold.it/1024x768" alt="">
+						<p>Caption image 1.</p>
+					</a>
+				</li>
+				<li>
+					<a href="http://placehold.it/1024x768">					
+						<img src="http://placehold.it/1024x768" alt="">
+						<p>Caption image 2.</p>
+					</a>
+				</li>
+				<li>
+					<a href="http://placehold.it/1024x768">					
+						<img src="http://placehold.it/1024x768" alt="">
+						<p>Caption image 3.</p>
+					</a>
+				</li>
+				<li>
+					<a href="http://placehold.it/1024x768">					
+						<img src="http://placehold.it/1024x768" alt="">
+						<p>Caption image 4.</p>
+					</a>
+				</li>
+				<li>
+					<a href="http://placehold.it/1024x768">					
+						<img src="http://placehold.it/1024x768" alt="">
+						<p>Caption image 5.</p>
+					</a>
+				</li>
+				<li>
+					<a href="http://placehold.it/1024x768">					
+						<img src="http://placehold.it/1024x768" alt="">
+						<p>Caption image 6.</p>
+					</a>
+				</li>
+			</ul>
 		</section>
 		<footer>
+			<a href="http://twitter.com" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo"></a>
+			<a href="http://facebook.com" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo"></a>
 			<p>&copy; Denver Conrad</p>
 		</footer>
 	</body>
