Added external css file

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Denver Conrad | Designer</title>
-		<link rel="stylesheet" href="css/normalize.css">
-	</head>
-	<body>
+
+<head>
+	<meta charset="utf-8">
+	<title>Denver Conrad | Designer</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+	<div id="wrapper">
 		<header>
-			<a href="index.html">
+			<a href="index.html" id="logo">
 				<h1>Denver Conrad</h1>
-				<h2>Designer</h2>	
+				<h2>Designer</h2>
 			</a>
 			<nav>
 				<ul>
@@ -22,37 +26,37 @@
 		<section>
 			<ul>
 				<li>
-					<a href="http://placehold.it/1024x768">					
+					<a href="http://placehold.it/1024x768">
 						<img src="http://placehold.it/1024x768" alt="">
 						<p>Caption image 1.</p>
 					</a>
 				</li>
 				<li>
-					<a href="http://placehold.it/1024x768">					
+					<a href="http://placehold.it/1024x768">
 						<img src="http://placehold.it/1024x768" alt="">
 						<p>Caption image 2.</p>
 					</a>
 				</li>
 				<li>
-					<a href="http://placehold.it/1024x768">					
+					<a href="http://placehold.it/1024x768">
 						<img src="http://placehold.it/1024x768" alt="">
 						<p>Caption image 3.</p>
 					</a>
 				</li>
 				<li>
-					<a href="http://placehold.it/1024x768">					
+					<a href="http://placehold.it/1024x768">
 						<img src="http://placehold.it/1024x768" alt="">
 						<p>Caption image 4.</p>
 					</a>
 				</li>
 				<li>
-					<a href="http://placehold.it/1024x768">					
+					<a href="http://placehold.it/1024x768">
 						<img src="http://placehold.it/1024x768" alt="">
 						<p>Caption image 5.</p>
 					</a>
 				</li>
 				<li>
-					<a href="http://placehold.it/1024x768">					
+					<a href="http://placehold.it/1024x768">
 						<img src="http://placehold.it/1024x768" alt="">
 						<p>Caption image 6.</p>
 					</a>
@@ -64,5 +68,7 @@
 			<a href="http://facebook.com" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo"></a>
 			<p>&copy; Denver Conrad</p>
 		</footer>
-	</body>
+	</div>
+</body>
+
 </html>
