--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<title>Denver Conrad | Designer</title>
 	<link rel="stylesheet" href="css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Open+Sans:300,300i,400,400i,700,700i,800" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -17,7 +18,7 @@
 			</a>
 			<nav>
 				<ul>
-					<li><a href="index.html">Portfolio</a></li>
+					<li><a href="index.html" class="selected">Portfolio</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
@@ -26,38 +27,38 @@
 		<section>
 			<ul>
 				<li>
-					<a href="http://placehold.it/1024x768">
-						<img src="http://placehold.it/1024x768" alt="">
+					<a href="">
+						<img src="img/perfume-bottle.jpg" alt="Perfume Bottle">
 						<p>Caption image 1.</p>
 					</a>
 				</li>
 				<li>
-					<a href="http://placehold.it/1024x768">
-						<img src="http://placehold.it/1024x768" alt="">
+					<a href="">
+						<img src="img/wooden-sculpture.jpg" alt="Wooden Sculptures">
 						<p>Caption image 2.</p>
 					</a>
 				</li>
 				<li>
-					<a href="http://placehold.it/1024x768">
-						<img src="http://placehold.it/1024x768" alt="">
+					<a href="">
+						<img src="img/graffiti.jpg" alt="Graffiti">
 						<p>Caption image 3.</p>
 					</a>
 				</li>
 				<li>
-					<a href="http://placehold.it/1024x768">
-						<img src="http://placehold.it/1024x768" alt="">
+					<a href="">
+						<img src="img/color-paint-palette-wall-painting.jpg" alt="Colour Palette">
 						<p>Caption image 4.</p>
 					</a>
 				</li>
 				<li>
-					<a href="http://placehold.it/1024x768">
-						<img src="http://placehold.it/1024x768" alt="">
+					<a href="">
+						<img src="img/pencils.jpg" alt="Colourful Pencils">
 						<p>Caption image 5.</p>
 					</a>
 				</li>
 				<li>
-					<a href="http://placehold.it/1024x768">
-						<img src="http://placehold.it/1024x768" alt="">
+					<a href="">
+						<img src="img/yellow-metal-design-decoration.jpg" alt="Metal Design Decoration">
 						<p>Caption image 6.</p>
 					</a>
 				</li>
@@ -67,6 +68,9 @@
 			<a href="http://twitter.com" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo"></a>
 			<a href="http://facebook.com" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo"></a>
 			<p>&copy; Denver Conrad</p>
+			<p>Built by <a href="http://www.kbazant.com" target="_blank">KB</a> using Bootstrap 4 framework.
+			</p>
+			<p>This web page is created for demonstration purposes only. The technologies used can be applied to create a similar website. For further information please <a href="http://www.kbazant.com/#contact" target="_blank">contact me.</a></p>
 		</footer>
 	</div>
 </body>
