changed disclaimer text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</nav>
 		</header>
 		<section>
-			<ul>
+			<ul id="gallery">
 				<li>
 					<a href="">
 						<img src="img/perfume-bottle.jpg" alt="Perfume Bottle">
@@ -70,7 +70,7 @@
 			<p>&copy; Denver Conrad</p>
 			<p>Built by <a href="http://www.kbazant.com" target="_blank">KB</a> using Bootstrap 4 framework.
 			</p>
-			<p>This web page is created for demonstration purposes only. The technologies used can be applied to create a similar website. For further information please <a href="http://www.kbazant.com/#contact" target="_blank">contact me.</a></p>
+			<p>This website is created for demonstration purposes only. The technologies used can be applied to create a similar website. For further information please <a href="http://www.kbazant.com/#contact" target="_blank">contact me.</a></p>
 		</footer>
 	</div>
 </body>
