--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Denver Conrad | Designer</title>
+	<title>Lilia Conrad | Designer</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Open+Sans:300,300i,400,400i,700,700i,800" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-	<div id="wrapper">
 		<header>
 			<a href="index.html" id="logo">
-				<h1>Denver Conrad</h1>
+				<h1>Lilia Conrad</h1>
 				<h2>Designer</h2>
 			</a>
 			<nav>
@@ -24,6 +23,7 @@
 				</ul>
 			</nav>
 		</header>
+		<div id="wrapper">
 		<section>
 			<ul id="gallery">
 				<li>
@@ -65,9 +65,9 @@
 			</ul>
 		</section>
 		<footer>
-			<a href="http://twitter.com" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo"></a>
-			<a href="http://facebook.com" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo"></a>
-			<p>&copy; Denver Conrad</p>
+			<a href="http://twitter.com" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+			<a href="http://facebook.com" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+			<p>&copy; Lilia Conrad</p>
 			<p>Built by <a href="http://www.kbazant.com" target="_blank">KB</a> using Bootstrap 4 framework.
 			</p>
 			<p>This website is created for demonstration purposes only. The technologies used can be applied to create a similar website. For further information please <a href="http://www.kbazant.com/#contact" target="_blank">contact me.</a></p>
