added responsive.css for media queries

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Open+Sans:300,300i,400,400i,700,700i,800" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/responsive.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -68,7 +70,7 @@
 			<a href="http://twitter.com" target="_blank"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
 			<a href="http://facebook.com" target="_blank"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
 			<p>&copy; Lilia Conrad</p>
-			<p>Built by <a href="http://www.kbazant.com" target="_blank">KB</a> using Bootstrap 4 framework.
+			<p>Built by <a href="http://www.kbazant.com" target="_blank">KB</a>
 			</p>
 			<p>This website is created for demonstration purposes only. The technologies used can be applied to create a similar website. For further information please <a href="http://www.kbazant.com/#contact" target="_blank">contact me.</a></p>
 		</footer>
