added portfolio image captions

--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
 			<ul id="gallery">
 				<li>
 						<img src="img/perfume-bottle.jpg" alt="Perfume Bottle">
-						<p>Caption image 1.</p>
+						<p>Product packaging</p>
 				</li>
 				<li>
 						<img src="img/wooden-sculpture.jpg" alt="Wooden Sculptures">
-						<p>Caption image 2.</p>
+						<p>Wooden sculptures</p>
 				</li>
 				<li>
 						<img src="img/graffiti.jpg" alt="Graffiti">
-						<p>Caption image 3.</p>
+						<p>Graffiti</p>
 				</li>
 				<li>
 						<img src="img/color-paint-palette-wall-painting.jpg" alt="Colour Palette">
-						<p>Caption image 4.</p>
+						<p>Colour palette</p>
 				</li>
 				<li>
 						<img src="img/pencils.jpg" alt="Colourful Pencils">
-						<p>Caption image 5.</p>
+						<p>Colourful pencils</p>
 				</li>
 				<li>
 						<img src="img/yellow-metal-design-decoration.jpg" alt="Metal Design Decoration">
-						<p>Caption image 6.</p>
+						<p>Metal decoration</p>
 				</li>
 			</ul>
 		</section>
